kustomize/overlay/staging/iwiick-brean-and-brew-local-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-brean-and-brew-local-staging
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_2db65eb5-fb3b-48f3-a016-1edf7e9e473c
    environmentId: env_28f618aa-3d1e-4909-9ebd-09b387e78dd7
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_28f618aa-3d1e-4909-9ebd-09b387e78dd7
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
