kustomize/overlay/staging/iwiick-brean-and-brew-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-brean-and-brew-staging
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_78bf2621-6ba3-4cd7-963a-058179ce0ef9
    environmentId: env_1a87bd72-0386-4592-aa0d-74a082510bbc
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_1a87bd72-0386-4592-aa0d-74a082510bbc
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
